fixed products
